report9/pairs/parser.output
   0  $accept : %entry% $end

   1  toplevel : expr SEMISEMI
   2           | LET var EQ expr SEMISEMI
   3           | LET var vars EQ expr SEMISEMI
   4           | LET REC var var EQ expr SEMISEMI

   5  expr : LET var EQ expr IN expr
   6       | LET var vars EQ expr IN expr
   7       | LET REC var var EQ expr IN expr
   8       | IF expr THEN expr ELSE expr
   9       | FUN var ARROW expr
  10       | FUN var vars ARROW expr
  11       | DFUN var ARROW expr
  12       | arith_expr EQ arith_expr
  13       | arith_expr LT arith_expr
  14       | MATCH expr WITH cases
  15       | MATCH expr WITH BAR cases
  16       | list_expr

  17  cases : pattern ARROW expr
  18        | pattern ARROW expr BAR cases

  19  pattern : atomic_pattern CONS pattern
  20          | atomic_pattern

  21  atomic_pattern : INT
  22                 | BOOL
  23                 | var
  24                 | LPAR pattern COMMA pattern RPAR
  25                 | LBRACKET RBRACKET
  26                 | LPAR pattern RPAR

  27  list_expr : arith_expr CONS list_expr
  28            | arith_expr

  29  arith_expr : arith_expr PLUS factor_expr
  30             | arith_expr MINUS factor_expr
  31             | factor_expr

  32  factor_expr : factor_expr TIMES app_expr
  33              | factor_expr DIV app_expr
  34              | app_expr

  35  app_expr : app_expr atomic_expr
  36           | atomic_expr

  37  atomic_expr : INT
  38              | BOOL
  39              | LPAR expr COMMA expr RPAR
  40              | LBRACKET RBRACKET
  41              | ID
  42              | LPAR expr RPAR

  43  vars : var vars
  44       | var

  45  var : ID

  46  %entry% : '\001' toplevel

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . toplevel  (46)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 6
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	.  error

	toplevel  goto 13
	expr  goto 14
	arith_expr  goto 15
	list_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	atomic_expr : INT .  (37)

	.  reduce 37


state 4
	atomic_expr : BOOL .  (38)

	.  reduce 38


state 5
	atomic_expr : ID .  (41)

	.  reduce 41


state 6
	toplevel : LET . var EQ expr SEMISEMI  (2)
	toplevel : LET . var vars EQ expr SEMISEMI  (3)
	toplevel : LET . REC var var EQ expr SEMISEMI  (4)
	expr : LET . var EQ expr IN expr  (5)
	expr : LET . var vars EQ expr IN expr  (6)
	expr : LET . REC var var EQ expr IN expr  (7)

	ID  shift 20
	REC  shift 21
	.  error

	var  goto 22


state 7
	expr : IF . expr THEN expr ELSE expr  (8)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 23
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	.  error

	expr  goto 24
	arith_expr  goto 15
	list_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 8
	atomic_expr : LPAR . expr COMMA expr RPAR  (39)
	atomic_expr : LPAR . expr RPAR  (42)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 23
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	.  error

	expr  goto 25
	arith_expr  goto 15
	list_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 9
	expr : FUN . var ARROW expr  (9)
	expr : FUN . var vars ARROW expr  (10)

	ID  shift 20
	.  error

	var  goto 26


state 10
	expr : DFUN . var ARROW expr  (11)

	ID  shift 20
	.  error

	var  goto 27


state 11
	atomic_expr : LBRACKET . RBRACKET  (40)

	RBRACKET  shift 28
	.  error


state 12
	expr : MATCH . expr WITH cases  (14)
	expr : MATCH . expr WITH BAR cases  (15)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 23
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	.  error

	expr  goto 29
	arith_expr  goto 15
	list_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 13
	%entry% : '\001' toplevel .  (46)

	.  reduce 46


state 14
	toplevel : expr . SEMISEMI  (1)

	SEMISEMI  shift 30
	.  error


state 15
	expr : arith_expr . EQ arith_expr  (12)
	expr : arith_expr . LT arith_expr  (13)
	list_expr : arith_expr . CONS list_expr  (27)
	list_expr : arith_expr .  (28)
	arith_expr : arith_expr . PLUS factor_expr  (29)
	arith_expr : arith_expr . MINUS factor_expr  (30)

	PLUS  shift 31
	MINUS  shift 32
	EQ  shift 33
	LT  shift 34
	CONS  shift 35
	IN  reduce 28
	THEN  reduce 28
	ELSE  reduce 28
	RPAR  reduce 28
	COMMA  reduce 28
	WITH  reduce 28
	BAR  reduce 28
	SEMISEMI  reduce 28


state 16
	expr : list_expr .  (16)

	.  reduce 16


state 17
	arith_expr : factor_expr .  (31)
	factor_expr : factor_expr . TIMES app_expr  (32)
	factor_expr : factor_expr . DIV app_expr  (33)

	TIMES  shift 36
	DIV  shift 37
	IN  reduce 31
	PLUS  reduce 31
	MINUS  reduce 31
	EQ  reduce 31
	LT  reduce 31
	THEN  reduce 31
	ELSE  reduce 31
	RPAR  reduce 31
	CONS  reduce 31
	COMMA  reduce 31
	WITH  reduce 31
	BAR  reduce 31
	SEMISEMI  reduce 31


state 18
	factor_expr : app_expr .  (34)
	app_expr : app_expr . atomic_expr  (35)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	LBRACKET  shift 11
	IN  reduce 34
	PLUS  reduce 34
	TIMES  reduce 34
	MINUS  reduce 34
	DIV  reduce 34
	EQ  reduce 34
	LT  reduce 34
	THEN  reduce 34
	ELSE  reduce 34
	RPAR  reduce 34
	CONS  reduce 34
	COMMA  reduce 34
	WITH  reduce 34
	BAR  reduce 34
	SEMISEMI  reduce 34

	atomic_expr  goto 38


state 19
	app_expr : atomic_expr .  (36)

	.  reduce 36


state 20
	var : ID .  (45)

	.  reduce 45


state 21
	toplevel : LET REC . var var EQ expr SEMISEMI  (4)
	expr : LET REC . var var EQ expr IN expr  (7)

	ID  shift 20
	.  error

	var  goto 39


state 22
	toplevel : LET var . EQ expr SEMISEMI  (2)
	toplevel : LET var . vars EQ expr SEMISEMI  (3)
	expr : LET var . EQ expr IN expr  (5)
	expr : LET var . vars EQ expr IN expr  (6)

	ID  shift 20
	EQ  shift 40
	.  error

	var  goto 41
	vars  goto 42


state 23
	expr : LET . var EQ expr IN expr  (5)
	expr : LET . var vars EQ expr IN expr  (6)
	expr : LET . REC var var EQ expr IN expr  (7)

	ID  shift 20
	REC  shift 43
	.  error

	var  goto 44


state 24
	expr : IF expr . THEN expr ELSE expr  (8)

	THEN  shift 45
	.  error


state 25
	atomic_expr : LPAR expr . COMMA expr RPAR  (39)
	atomic_expr : LPAR expr . RPAR  (42)

	RPAR  shift 46
	COMMA  shift 47
	.  error


state 26
	expr : FUN var . ARROW expr  (9)
	expr : FUN var . vars ARROW expr  (10)

	ID  shift 20
	ARROW  shift 48
	.  error

	var  goto 41
	vars  goto 49


state 27
	expr : DFUN var . ARROW expr  (11)

	ARROW  shift 50
	.  error


state 28
	atomic_expr : LBRACKET RBRACKET .  (40)

	.  reduce 40


state 29
	expr : MATCH expr . WITH cases  (14)
	expr : MATCH expr . WITH BAR cases  (15)

	WITH  shift 51
	.  error


state 30
	toplevel : expr SEMISEMI .  (1)

	.  reduce 1


state 31
	arith_expr : arith_expr PLUS . factor_expr  (29)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	LBRACKET  shift 11
	.  error

	factor_expr  goto 52
	app_expr  goto 18
	atomic_expr  goto 19


state 32
	arith_expr : arith_expr MINUS . factor_expr  (30)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	LBRACKET  shift 11
	.  error

	factor_expr  goto 53
	app_expr  goto 18
	atomic_expr  goto 19


state 33
	expr : arith_expr EQ . arith_expr  (12)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	LBRACKET  shift 11
	.  error

	arith_expr  goto 54
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 34
	expr : arith_expr LT . arith_expr  (13)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	LBRACKET  shift 11
	.  error

	arith_expr  goto 55
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 35
	list_expr : arith_expr CONS . list_expr  (27)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	LBRACKET  shift 11
	.  error

	arith_expr  goto 56
	list_expr  goto 57
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 36
	factor_expr : factor_expr TIMES . app_expr  (32)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	LBRACKET  shift 11
	.  error

	app_expr  goto 58
	atomic_expr  goto 19


state 37
	factor_expr : factor_expr DIV . app_expr  (33)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	LBRACKET  shift 11
	.  error

	app_expr  goto 59
	atomic_expr  goto 19


state 38
	app_expr : app_expr atomic_expr .  (35)

	.  reduce 35


state 39
	toplevel : LET REC var . var EQ expr SEMISEMI  (4)
	expr : LET REC var . var EQ expr IN expr  (7)

	ID  shift 20
	.  error

	var  goto 60


state 40
	toplevel : LET var EQ . expr SEMISEMI  (2)
	expr : LET var EQ . expr IN expr  (5)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 23
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	.  error

	expr  goto 61
	arith_expr  goto 15
	list_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 41
	vars : var . vars  (43)
	vars : var .  (44)

	ID  shift 20
	EQ  reduce 44
	ARROW  reduce 44

	var  goto 41
	vars  goto 62


state 42
	toplevel : LET var vars . EQ expr SEMISEMI  (3)
	expr : LET var vars . EQ expr IN expr  (6)

	EQ  shift 63
	.  error


state 43
	expr : LET REC . var var EQ expr IN expr  (7)

	ID  shift 20
	.  error

	var  goto 64


state 44
	expr : LET var . EQ expr IN expr  (5)
	expr : LET var . vars EQ expr IN expr  (6)

	ID  shift 20
	EQ  shift 65
	.  error

	var  goto 41
	vars  goto 66


state 45
	expr : IF expr THEN . expr ELSE expr  (8)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 23
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	.  error

	expr  goto 67
	arith_expr  goto 15
	list_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 46
	atomic_expr : LPAR expr RPAR .  (42)

	.  reduce 42


state 47
	atomic_expr : LPAR expr COMMA . expr RPAR  (39)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 23
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	.  error

	expr  goto 68
	arith_expr  goto 15
	list_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 48
	expr : FUN var ARROW . expr  (9)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 23
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	.  error

	expr  goto 69
	arith_expr  goto 15
	list_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 49
	expr : FUN var vars . ARROW expr  (10)

	ARROW  shift 70
	.  error


state 50
	expr : DFUN var ARROW . expr  (11)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 23
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	.  error

	expr  goto 71
	arith_expr  goto 15
	list_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 51
	expr : MATCH expr WITH . cases  (14)
	expr : MATCH expr WITH . BAR cases  (15)

	INT  shift 72
	BOOL  shift 73
	ID  shift 20
	LPAR  shift 74
	LBRACKET  shift 75
	BAR  shift 76
	.  error

	var  goto 77
	cases  goto 78
	pattern  goto 79
	atomic_pattern  goto 80


state 52
	arith_expr : arith_expr PLUS factor_expr .  (29)
	factor_expr : factor_expr . TIMES app_expr  (32)
	factor_expr : factor_expr . DIV app_expr  (33)

	TIMES  shift 36
	DIV  shift 37
	IN  reduce 29
	PLUS  reduce 29
	MINUS  reduce 29
	EQ  reduce 29
	LT  reduce 29
	THEN  reduce 29
	ELSE  reduce 29
	RPAR  reduce 29
	CONS  reduce 29
	COMMA  reduce 29
	WITH  reduce 29
	BAR  reduce 29
	SEMISEMI  reduce 29


state 53
	arith_expr : arith_expr MINUS factor_expr .  (30)
	factor_expr : factor_expr . TIMES app_expr  (32)
	factor_expr : factor_expr . DIV app_expr  (33)

	TIMES  shift 36
	DIV  shift 37
	IN  reduce 30
	PLUS  reduce 30
	MINUS  reduce 30
	EQ  reduce 30
	LT  reduce 30
	THEN  reduce 30
	ELSE  reduce 30
	RPAR  reduce 30
	CONS  reduce 30
	COMMA  reduce 30
	WITH  reduce 30
	BAR  reduce 30
	SEMISEMI  reduce 30


state 54
	expr : arith_expr EQ arith_expr .  (12)
	arith_expr : arith_expr . PLUS factor_expr  (29)
	arith_expr : arith_expr . MINUS factor_expr  (30)

	PLUS  shift 31
	MINUS  shift 32
	IN  reduce 12
	THEN  reduce 12
	ELSE  reduce 12
	RPAR  reduce 12
	COMMA  reduce 12
	WITH  reduce 12
	BAR  reduce 12
	SEMISEMI  reduce 12


state 55
	expr : arith_expr LT arith_expr .  (13)
	arith_expr : arith_expr . PLUS factor_expr  (29)
	arith_expr : arith_expr . MINUS factor_expr  (30)

	PLUS  shift 31
	MINUS  shift 32
	IN  reduce 13
	THEN  reduce 13
	ELSE  reduce 13
	RPAR  reduce 13
	COMMA  reduce 13
	WITH  reduce 13
	BAR  reduce 13
	SEMISEMI  reduce 13


state 56
	list_expr : arith_expr . CONS list_expr  (27)
	list_expr : arith_expr .  (28)
	arith_expr : arith_expr . PLUS factor_expr  (29)
	arith_expr : arith_expr . MINUS factor_expr  (30)

	PLUS  shift 31
	MINUS  shift 32
	CONS  shift 35
	IN  reduce 28
	THEN  reduce 28
	ELSE  reduce 28
	RPAR  reduce 28
	COMMA  reduce 28
	WITH  reduce 28
	BAR  reduce 28
	SEMISEMI  reduce 28


state 57
	list_expr : arith_expr CONS list_expr .  (27)

	.  reduce 27


state 58
	factor_expr : factor_expr TIMES app_expr .  (32)
	app_expr : app_expr . atomic_expr  (35)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	LBRACKET  shift 11
	IN  reduce 32
	PLUS  reduce 32
	TIMES  reduce 32
	MINUS  reduce 32
	DIV  reduce 32
	EQ  reduce 32
	LT  reduce 32
	THEN  reduce 32
	ELSE  reduce 32
	RPAR  reduce 32
	CONS  reduce 32
	COMMA  reduce 32
	WITH  reduce 32
	BAR  reduce 32
	SEMISEMI  reduce 32

	atomic_expr  goto 38


state 59
	factor_expr : factor_expr DIV app_expr .  (33)
	app_expr : app_expr . atomic_expr  (35)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	LBRACKET  shift 11
	IN  reduce 33
	PLUS  reduce 33
	TIMES  reduce 33
	MINUS  reduce 33
	DIV  reduce 33
	EQ  reduce 33
	LT  reduce 33
	THEN  reduce 33
	ELSE  reduce 33
	RPAR  reduce 33
	CONS  reduce 33
	COMMA  reduce 33
	WITH  reduce 33
	BAR  reduce 33
	SEMISEMI  reduce 33

	atomic_expr  goto 38


state 60
	toplevel : LET REC var var . EQ expr SEMISEMI  (4)
	expr : LET REC var var . EQ expr IN expr  (7)

	EQ  shift 81
	.  error


state 61
	toplevel : LET var EQ expr . SEMISEMI  (2)
	expr : LET var EQ expr . IN expr  (5)

	IN  shift 82
	SEMISEMI  shift 83
	.  error


state 62
	vars : var vars .  (43)

	.  reduce 43


state 63
	toplevel : LET var vars EQ . expr SEMISEMI  (3)
	expr : LET var vars EQ . expr IN expr  (6)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 23
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	.  error

	expr  goto 84
	arith_expr  goto 15
	list_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 64
	expr : LET REC var . var EQ expr IN expr  (7)

	ID  shift 20
	.  error

	var  goto 85


state 65
	expr : LET var EQ . expr IN expr  (5)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 23
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	.  error

	expr  goto 86
	arith_expr  goto 15
	list_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 66
	expr : LET var vars . EQ expr IN expr  (6)

	EQ  shift 87
	.  error


state 67
	expr : IF expr THEN expr . ELSE expr  (8)

	ELSE  shift 88
	.  error


state 68
	atomic_expr : LPAR expr COMMA expr . RPAR  (39)

	RPAR  shift 89
	.  error


state 69
	expr : FUN var ARROW expr .  (9)

	.  reduce 9


state 70
	expr : FUN var vars ARROW . expr  (10)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 23
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	.  error

	expr  goto 90
	arith_expr  goto 15
	list_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 71
	expr : DFUN var ARROW expr .  (11)

	.  reduce 11


state 72
	atomic_pattern : INT .  (21)

	.  reduce 21


state 73
	atomic_pattern : BOOL .  (22)

	.  reduce 22


state 74
	atomic_pattern : LPAR . pattern COMMA pattern RPAR  (24)
	atomic_pattern : LPAR . pattern RPAR  (26)

	INT  shift 72
	BOOL  shift 73
	ID  shift 20
	LPAR  shift 74
	LBRACKET  shift 75
	.  error

	var  goto 77
	pattern  goto 91
	atomic_pattern  goto 80


state 75
	atomic_pattern : LBRACKET . RBRACKET  (25)

	RBRACKET  shift 92
	.  error


state 76
	expr : MATCH expr WITH BAR . cases  (15)

	INT  shift 72
	BOOL  shift 73
	ID  shift 20
	LPAR  shift 74
	LBRACKET  shift 75
	.  error

	var  goto 77
	cases  goto 93
	pattern  goto 79
	atomic_pattern  goto 80


state 77
	atomic_pattern : var .  (23)

	.  reduce 23


state 78
	expr : MATCH expr WITH cases .  (14)

	.  reduce 14


state 79
	cases : pattern . ARROW expr  (17)
	cases : pattern . ARROW expr BAR cases  (18)

	ARROW  shift 94
	.  error


state 80
	pattern : atomic_pattern . CONS pattern  (19)
	pattern : atomic_pattern .  (20)

	CONS  shift 95
	RPAR  reduce 20
	ARROW  reduce 20
	COMMA  reduce 20


state 81
	toplevel : LET REC var var EQ . expr SEMISEMI  (4)
	expr : LET REC var var EQ . expr IN expr  (7)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 23
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	.  error

	expr  goto 96
	arith_expr  goto 15
	list_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 82
	expr : LET var EQ expr IN . expr  (5)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 23
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	.  error

	expr  goto 97
	arith_expr  goto 15
	list_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 83
	toplevel : LET var EQ expr SEMISEMI .  (2)

	.  reduce 2


state 84
	toplevel : LET var vars EQ expr . SEMISEMI  (3)
	expr : LET var vars EQ expr . IN expr  (6)

	IN  shift 98
	SEMISEMI  shift 99
	.  error


state 85
	expr : LET REC var var . EQ expr IN expr  (7)

	EQ  shift 100
	.  error


state 86
	expr : LET var EQ expr . IN expr  (5)

	IN  shift 82
	.  error


state 87
	expr : LET var vars EQ . expr IN expr  (6)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 23
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	.  error

	expr  goto 101
	arith_expr  goto 15
	list_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 88
	expr : IF expr THEN expr ELSE . expr  (8)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 23
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	.  error

	expr  goto 102
	arith_expr  goto 15
	list_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 89
	atomic_expr : LPAR expr COMMA expr RPAR .  (39)

	.  reduce 39


state 90
	expr : FUN var vars ARROW expr .  (10)

	.  reduce 10


state 91
	atomic_pattern : LPAR pattern . COMMA pattern RPAR  (24)
	atomic_pattern : LPAR pattern . RPAR  (26)

	RPAR  shift 103
	COMMA  shift 104
	.  error


state 92
	atomic_pattern : LBRACKET RBRACKET .  (25)

	.  reduce 25


state 93
	expr : MATCH expr WITH BAR cases .  (15)

	.  reduce 15


state 94
	cases : pattern ARROW . expr  (17)
	cases : pattern ARROW . expr BAR cases  (18)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 23
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	.  error

	expr  goto 105
	arith_expr  goto 15
	list_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 95
	pattern : atomic_pattern CONS . pattern  (19)

	INT  shift 72
	BOOL  shift 73
	ID  shift 20
	LPAR  shift 74
	LBRACKET  shift 75
	.  error

	var  goto 77
	pattern  goto 106
	atomic_pattern  goto 80


state 96
	toplevel : LET REC var var EQ expr . SEMISEMI  (4)
	expr : LET REC var var EQ expr . IN expr  (7)

	IN  shift 107
	SEMISEMI  shift 108
	.  error


state 97
	expr : LET var EQ expr IN expr .  (5)

	.  reduce 5


state 98
	expr : LET var vars EQ expr IN . expr  (6)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 23
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	.  error

	expr  goto 109
	arith_expr  goto 15
	list_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 99
	toplevel : LET var vars EQ expr SEMISEMI .  (3)

	.  reduce 3


state 100
	expr : LET REC var var EQ . expr IN expr  (7)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 23
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	.  error

	expr  goto 110
	arith_expr  goto 15
	list_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 101
	expr : LET var vars EQ expr . IN expr  (6)

	IN  shift 98
	.  error


state 102
	expr : IF expr THEN expr ELSE expr .  (8)

	.  reduce 8


state 103
	atomic_pattern : LPAR pattern RPAR .  (26)

	.  reduce 26


state 104
	atomic_pattern : LPAR pattern COMMA . pattern RPAR  (24)

	INT  shift 72
	BOOL  shift 73
	ID  shift 20
	LPAR  shift 74
	LBRACKET  shift 75
	.  error

	var  goto 77
	pattern  goto 111
	atomic_pattern  goto 80


105: shift/reduce conflict (shift 112, reduce 17) on BAR
state 105
	cases : pattern ARROW expr .  (17)
	cases : pattern ARROW expr . BAR cases  (18)

	BAR  shift 112
	IN  reduce 17
	THEN  reduce 17
	ELSE  reduce 17
	RPAR  reduce 17
	COMMA  reduce 17
	WITH  reduce 17
	SEMISEMI  reduce 17


state 106
	pattern : atomic_pattern CONS pattern .  (19)

	.  reduce 19


state 107
	expr : LET REC var var EQ expr IN . expr  (7)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 23
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	.  error

	expr  goto 113
	arith_expr  goto 15
	list_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 108
	toplevel : LET REC var var EQ expr SEMISEMI .  (4)

	.  reduce 4


state 109
	expr : LET var vars EQ expr IN expr .  (6)

	.  reduce 6


state 110
	expr : LET REC var var EQ expr . IN expr  (7)

	IN  shift 107
	.  error


state 111
	atomic_pattern : LPAR pattern COMMA pattern . RPAR  (24)

	RPAR  shift 114
	.  error


state 112
	cases : pattern ARROW expr BAR . cases  (18)

	INT  shift 72
	BOOL  shift 73
	ID  shift 20
	LPAR  shift 74
	LBRACKET  shift 75
	.  error

	var  goto 77
	cases  goto 115
	pattern  goto 79
	atomic_pattern  goto 80


state 113
	expr : LET REC var var EQ expr IN expr .  (7)

	.  reduce 7


state 114
	atomic_pattern : LPAR pattern COMMA pattern RPAR .  (24)

	.  reduce 24


state 115
	cases : pattern ARROW expr BAR cases .  (18)

	.  reduce 18


State 105 contains 1 shift/reduce conflict.


32 terminals, 14 nonterminals
47 grammar rules, 116 states
